feat: Arrumando formato de imagens e adicionand o a imagem da logo horizontal (Arrumando umas gambiarras estilisticas tambem)

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   </head>
   <body>
     <header>
-      <span>Boi Encanto da Natureza</span>
+      <img
+        src="./assets/images/header/logo-horizontal-encanto-da-natureza.webp"
+        alt="Logo Horizontal do Encanto da Natureza"
+        class="header-logo"
+      />
       <nav class="header__navigation-container">
         <span id="header-home-nav" class="navigation-container__nav-item">
           inicio
@@ -70,7 +74,7 @@
           <img
             alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
             class="section-image"
-            src="assets/images/sections/logo-encanto-da-natureza.png"
+            src="assets/images/sections/logo-encanto-da-natureza.webp"
           />
           <figcaption>
             Logomarca do grupo folclórico Boi Encanto da Natureza
@@ -233,7 +237,7 @@
       <img
         alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
         class="section-image"
-        src="assets/images/sections/logo-encanto-da-natureza.png"
+        src="assets/images/sections/logo-encanto-da-natureza.webp"
       />
       <div>
         <h1>sobre nós</h1>
