fix: algumas mudancar e correcoes pelo codigo

--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
   </head>
   <body>
     <header>
-      <img
-        src="./assets/images/header/logo-horizontal-encanto-da-natureza.webp"
-        alt="Logo Horizontal do Encanto da Natureza"
-        class="header-logo"
-      />
+      <span></span>
       <nav class="header__navigation-container">
         <span id="header-home-nav" class="navigation-container__nav-item">
           inicio
@@ -55,7 +51,7 @@
           preconceituosa, são ignorados e excluídos
         </p>
 
-        <div>
+        <div class="main-section__buttons-container">
           <button id="about-us-button" class="primary-button">
             Saiba Mais
           </button>
@@ -63,9 +59,7 @@
             href="https://google.com"
             target="_blank"
             class="main-section__youtube-button"
-          >
-            <span>Veja nossos videos</span>
-            <i class="youtube-button__icon fa-solid fa-play"></i>
+            >Veja nossos videos
           </a>
         </div>
       </div>
@@ -252,7 +246,7 @@
         </p>
       </div>
     </section>
-    <section id="donation-section" class="main-section">
+    <section id="donation-section" class="main-section donation-section">
       <div>
         <h1>doações</h1>
         <p class="section-description">
