feat: Arrumando responsividade

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </a>
         </div>
       </div>
-      <div>
+      <div class="main-section__image-container">
         <figure>
           <img
             alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
