--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </button>
           <p>
             <a
-              href="https://google.com"
+              href="https://www.instagram.com/encanto_da_naturezaofc/"
               target="_blank"
               class="main-section__youtube-button"
               >Veja nossos videos
