feat: Adicionando as rels no link para evitar possiveis ataques

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
             <a
               href="https://www.instagram.com/encanto_da_naturezaofc/"
               target="_blank"
+              rel="noreferrer noopener"
               class="main-section__youtube-button"
               >Veja nossos videos
             </a>
