feat: Passando as imagens da galeria para webp, dessa forma, diminuindo o tempo de carregamento e melhorando a experiencia do usuario

--- a/index.html
+++ b/index.html
@@ -82,107 +82,107 @@
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery1.jpg"
+          src="/assets/images/gallery/gallery1.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery2.jpg"
+          src="/assets/images/gallery/gallery2.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery9.jpg"
+          src="/assets/images/gallery/gallery9.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery4.jpg"
+          src="/assets/images/gallery/gallery4.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery5.jpg"
+          src="/assets/images/gallery/gallery5.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery6.jpg"
+          src="/assets/images/gallery/gallery6.webp"
         />
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery3.jpg"
-        />
-
-        <img
-          class="gallery-container__gallery-image"
-          alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery17.jpg"
+          src="/assets/images/gallery/gallery3.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery12.jpg"
+          src="/assets/images/gallery/gallery17.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery7.jpg"
+          src="/assets/images/gallery/gallery12.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery8.jpg"
+          src="/assets/images/gallery/gallery7.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery16.jpg"
+          src="/assets/images/gallery/gallery8.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery10.jpg"
+          src="/assets/images/gallery/gallery16.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery11.jpg"
+          src="/assets/images/gallery/gallery10.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery19.jpg"
-        />
-        <img
-          class="gallery-container__gallery-image"
-          alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery13.jpg"
+          src="/assets/images/gallery/gallery11.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery14.jpg"
+          src="/assets/images/gallery/gallery19.webp"
+        />
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery13.webp"
         />
 
         <img
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
-          src="/assets/images/gallery/gallery15.jpg"
+          src="/assets/images/gallery/gallery14.webp"
+        />
+
+        <img
+          class="gallery-container__gallery-image"
+          alt="imagem-da-galeria-durante-apresentação"
+          src="/assets/images/gallery/gallery15.webp"
         />
       </div>
       <div class="gallery-section__show-more-button-container">
