feat: meta description adicionada

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Descubra as tradições e danças folclóricas do nosso grupo. Vislumbre apresentações emocionantes e mergulhe na cultura local. Saiba mais sobre nossos eventos e como se envolver."
+    />
+
     <title>Boi encanto da Natureza</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/styles.css" />
