performance: retirando tags "strong" das descricoes, obtive 8s de melhora na primeira pintura da tela, testando remover os outros tambem

--- a/index.html
+++ b/index.html
@@ -48,12 +48,10 @@
           da Natureza
         </h1>
         <p class="section-description">
-          Por meio dos espetáculos o grupo folclórico
-          <strong>Boi Encanto da Natureza</strong> busca
-          <strong>re-introduzir</strong>, principalmente,
-          <strong>jovens</strong> (em sua maioria, pobre)
-          <strong>à sociedade</strong> onde, muitas vezes de maneira
-          preconceituosa, são ignorados e excluídos
+          Por meio dos espetáculos o grupo folclórico Boi Encanto da Natureza
+          busca re-introduzir, principalmente, jovens (em sua maioria, pobre) à
+          sociedade onde, muitas vezes de maneira preconceituosa, são ignorados
+          e excluídos
         </p>
 
         <div class="main-section__buttons-container">
@@ -73,6 +71,7 @@
       </div>
       <div class="main-section__image-container">
         <img
+          loading="lazy"
           alt="Logomarca do grupo folclórico Boi Encanto da Natureza"
           class="section-image"
           src="assets/images/sections/logo-encanto-da-natureza.webp"
