fix: Arruamdno a imagem de pattern, agora esta no formato certo

--- a/index.html
+++ b/index.html
@@ -237,13 +237,11 @@
       <div>
         <h1>sobre nós</h1>
         <p class="section-description">
-          Criado em <strong>05 de abril 2005</strong>, pela senhora
-          <strong>Fátima Cruz</strong> para inclusão das minorias do
-          <strong>povoado Livramento</strong> nas brincadeiras juninas. Composto
-          por brincantes das mais diversas faixas etárias, de crianças à
-          adultos, tem, como sua <strong>finalidade</strong>, a
-          <strong>inclusão e interação</strong> entre brincantes e sociadade
-          além, claro, da <strong>preservação da cultura</strong> indigena.
+          Criado em 05 de abril 2005, pela senhora Fátima Cruz para inclusão das
+          minorias do povoado Livramento nas brincadeiras juninas. Composto por
+          brincantes das mais diversas faixas etárias, de crianças à adultos,
+          tem, como sua finalidade, a inclusão e interação entre brincantes e
+          sociadade além, claro, da preservação da cultura indigena.
         </p>
       </div>
     </section>
@@ -251,11 +249,10 @@
       <div>
         <h1>doações</h1>
         <p class="section-description">
-          <strong>Estamos contando com você!</strong> Sua doação faz toda a
-          diferença para preservarmos as raízes do nosso grupo folclórico. Seja
-          parte ativa da nossa história, contribua agora e fortaleça a cultura
-          que amamos.
-          <strong>Agradecemos por seu apoio!</strong>
+          Estamos contando com você! Sua doação faz toda a diferença para
+          preservarmos as raízes do nosso grupo folclórico. Seja parte ativa da
+          nossa história, contribua agora e fortaleça a cultura que amamos.
+          Agradecemos por seu apoio!
         </p>
       </div>
       <div class="qrcode-container">
