fix: arummando a semantica das navigations

--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
     <header>
       <span></span>
       <nav class="header__navigation-container">
-        <span id="header-home-nav" class="navigation-container__nav-item">
+        <a id="header-home-nav" class="navigation-container__nav-item">
           inicio
-        </span>
-        <span id="header-gallery-nav" class="navigation-container__nav-item">
+        </a>
+        <a id="header-gallery-nav" class="navigation-container__nav-item">
           galeria
-        </span>
+        </a>
 
-        <span id="header-about-us-nav" class="navigation-container__nav-item">
+        <a id="header-about-us-nav" class="navigation-container__nav-item">
           sobre nos
-        </span>
+        </a>
 
-        <span id="header-donation-nav" class="navigation-container__nav-item">
+        <a id="header-donation-nav" class="navigation-container__nav-item">
           doacoes
-        </span>
+        </a>
       </nav>
     </header>
     <section id="main-section" class="main-section">
@@ -268,20 +268,20 @@
     </section>
     <footer>
       <nav class="footer__navigation-container">
-        <span id="footer-home-nav" class="navigation-container__nav-item">
+        <a id="footer-home-nav" class="navigation-container__nav-item">
           inicio
-        </span>
-        <span id="footer-gallery-nav" class="navigation-container__nav-item">
+        </a>
+        <a id="footer-gallery-nav" class="navigation-container__nav-item">
           galeria
-        </span>
+        </a>
 
-        <span id="footer-about-us-nav" class="navigation-container__nav-item">
+        <a id="footer-about-us-nav" class="navigation-container__nav-item">
           sobre nos
-        </span>
+        </a>
 
-        <span id="footer-donation-nav" class="navigation-container__nav-item">
+        <a id="footer-donation-nav" class="navigation-container__nav-item">
           doacoes
-        </span>
+        </a>
       </nav>
       <div class="footer__contact-info">
         <i class="fa-solid fa-location-dot"></i>
