performance: Removendo o uso do fontAwesome e agora usando os svgs baixados

--- a/index.html
+++ b/index.html
@@ -11,15 +11,6 @@
     <title>Boi encanto da Natureza</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/styles.css" />
-
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/regular.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    />
   </head>
   <body>
     <header>
@@ -84,106 +75,124 @@
       </div>
       <div class="gallery-section__gallery-container">
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery1.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery2.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery9.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery4.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery5.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery6.webp"
         />
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery3.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery17.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery12.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery7.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery8.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery16.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery10.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery11.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery19.webp"
         />
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery13.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery14.webp"
         />
 
         <img
+          loading="lazy"
           class="gallery-container__gallery-image"
           alt="imagem-da-galeria-durante-apresentação"
           src="/assets/images/gallery/gallery15.webp"
@@ -198,7 +207,7 @@
     <div class="cards-container">
       <div class="card">
         <div class="card__icon">
-          <i class="fa-solid fa-calendar-days"></i>
+          <img src="./assets/icons/calendar.svg" alt="Icone de calendario">
         </div>
         <h2 class="card__title">historia</h2>
         <p class="card__description">
@@ -208,7 +217,7 @@
 
       <div class="card">
         <div class="card__icon">
-          <i class="fa-solid fa-user-group"></i>
+          <img src="./assets/icons/peoples.svg" alt="Icone de pessoas">
         </div>
         <h2 class="card__title">impacto</h2>
         <p class="card__description">
@@ -219,7 +228,7 @@
 
       <div class="card">
         <div class="card__icon">
-          <i class="fa-solid fa-book-bookmark"></i>
+          <img src="./assets/icons/book.svg" alt="Icone de livro com marcador">
         </div>
         <h2 class="card__title">tradição</h2>
         <p class="card__description">
