--- a/index.html
+++ b/index.html
@@ -7,6 +7,19 @@
       name="description"
       content="Descubra as tradições e danças folclóricas do nosso grupo. Vislumbre apresentações emocionantes e mergulhe na cultura local. Saiba mais sobre nossos eventos e como se envolver."
     />
+    <style>
+      @font-face {
+        font-family: "Montserrat";
+        font-style: normal;
+        font-weight: 100 900;
+        font-display: swap;
+        src: url(https://fonts.gstatic.com/s/montserrat/v26/JTUSjIg1_i6t8kCHKm459Wlhyw.woff2)
+          format("woff2");
+        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6,
+          U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC,
+          U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+      }
+    </style>
 
     <title>Boi encanto da Natureza</title>
     <link rel="stylesheet" href="styles/reset.css" />
@@ -207,7 +220,7 @@
     <div class="cards-container">
       <div class="card">
         <div class="card__icon">
-          <img src="./assets/icons/calendar.svg" alt="Icone de calendario">
+          <img src="./assets/icons/calendar.svg" alt="Icone de calendario" />
         </div>
         <h2 class="card__title">historia</h2>
         <p class="card__description">
@@ -217,7 +230,7 @@
 
       <div class="card">
         <div class="card__icon">
-          <img src="./assets/icons/peoples.svg" alt="Icone de pessoas">
+          <img src="./assets/icons/peoples.svg" alt="Icone de pessoas" />
         </div>
         <h2 class="card__title">impacto</h2>
         <p class="card__description">
@@ -228,7 +241,10 @@
 
       <div class="card">
         <div class="card__icon">
-          <img src="./assets/icons/book.svg" alt="Icone de livro com marcador">
+          <img
+            src="./assets/icons/book.svg"
+            alt="Icone de livro com marcador"
+          />
         </div>
         <h2 class="card__title">tradição</h2>
         <p class="card__description">
@@ -305,6 +321,6 @@
       </div>
       <small class="footer-copy">Boi Encanto da Natureza &copy; 2024</small>
     </footer>
-    <script src="./scripts/script.js"></script>
+    <script async src="./scripts/script.js"></script>
   </body>
 </html>
