--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
       }
     </style>
-
+    <link rel="shortcut icon" href="/assets/icons/favicon.webp" type="image/x-icon">
     <title>Boi encanto da Natureza</title>
     <link rel="stylesheet" href="styles/reset.css" />
     <link rel="stylesheet" href="styles/styles.css" />
