feat: Melhorando um pouco mais as animações

--- a/index.html
+++ b/index.html
@@ -30,25 +30,25 @@
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/animations.css" />
 
-    <script defer src="scripts/aniamtions.js"></script>
+    <script defer src="scripts/animations.js"></script>
   </head>
   <body>
     <header>
       <span></span>
       <nav class="header__navigation-container">
         <a id="header-home-nav" class="navigation-container__nav-item">
-          inicio
+          início
         </a>
         <a id="header-gallery-nav" class="navigation-container__nav-item">
           galeria
         </a>
 
         <a id="header-about-us-nav" class="navigation-container__nav-item">
-          sobre nos
+          sobre nós
         </a>
 
         <a id="header-donation-nav" class="navigation-container__nav-item">
-          doacoes
+          doações
         </a>
       </nav>
     </header>
@@ -60,7 +60,7 @@
         </h1>
         <p class="animate section-description">
           Por meio dos espetáculos o grupo folclórico Boi Encanto da Natureza
-          busca re-introduzir, principalmente, jovens (em sua maioria, pobre) à
+          busca re-introduzir, principalmente, jovens, em sua maioria, pobre, à
           sociedade onde, muitas vezes de maneira preconceituosa, são ignorados
           e excluídos
         </p>
@@ -235,7 +235,7 @@
         </p>
       </div>
 
-      <div class="animate card">
+      <div class="animate animation-delay-1 card">
         <div class="card__icon">
           <img src="./assets/icons/peoples.svg" alt="Icone de pessoas" />
         </div>
@@ -246,7 +246,7 @@
         </p>
       </div>
 
-      <div class="animate card">
+      <div class="animate animation-delay-2 card">
         <div class="card__icon">
           <img
             src="./assets/icons/book.svg"
@@ -301,18 +301,18 @@
     <footer>
       <nav class="footer__navigation-container">
         <a id="footer-home-nav" class="navigation-container__nav-item">
-          inicio
+          início
         </a>
         <a id="footer-gallery-nav" class="navigation-container__nav-item">
           galeria
         </a>
 
         <a id="footer-about-us-nav" class="navigation-container__nav-item">
-          sobre nos
+          sobre nós
         </a>
 
         <a id="footer-donation-nav" class="navigation-container__nav-item">
-          doacoes
+          doações
         </a>
       </nav>
       <div class="footer__contact-info">
